[package]
name = "cetus-aggregator-rust"
version = "0.1.0"
edition = "2021"
authors = ["bu-bu-BUTASAN"]
description = "Rust client for Cetus Aggregator API"
license = "MIT"
repository = "https://github.com/bu-bu-BUTASAN/cetus-aggregator-rust"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
num-bigint = "0.4"
num-traits = "0.2"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_swap"
path = "examples/basic_swap.rs" 